# ai-native-software-development-Tutor

./: API_TESTING_GUIDE.md  ARCHITECTURE_UPDATE.md  BACKEND_FIX_STATUS.md  CLAUDE.md  E2E_TESTING_REPORT.md  EMBEDDINGS_SUMMARY.md  FRONTEND_ANALYSIS.md  FRONTEND_IMPLEMENTATION_PLAN.md  HANDOFF.md  IMPLEMENTATION_STATUS.md  PROJECT_OVERVIEW.md  QUICK_START.md  RAG_AGENT_TODO.md  RAG_FLOW_DIAGRAMS.md  README.md  SSL_TIMEOUT_FIX.md  STATUS.md  TASKS_UPDATE.md  add-tabs-to-lessons.py
Tutor-Agent/: .env  .env.example  .gitignore  README.md  SUMMARY_GENERATION_GUIDE.md  TESTING_OLIVIA.md  TESTING_THREE_TABS.md  check_env.py  check_system_env.py  diagnose_rag.py  pyproject.toml  show_env_content.py  test_backend_comprehensive.py  test_multilanguage.py  test_olivia_agent.py  test_olivia_profiles.py  test_openai_connection.py  test_path_resolution.py  test_signup_debug.py  test_three_tabs.py  test_visual_learning.py
Tutor-Agent/data/: tutorgpt.db
Tutor-Agent/data/embeddings/d69c732b-0a21-4f5b-a437-47cea526907e/: index_metadata.pickle
Tutor-Agent/scripts/: README.md  generate_embeddings.py  generate_summaries.py
Tutor-Agent/src/tutor_agent/: __init__.py  main.py
Tutor-Agent/src/tutor_agent/api/: __init__.py
Tutor-Agent/src/tutor_agent/config/: __init__.py  settings.py
Tutor-Agent/src/tutor_agent/core/: database.py  security.py
Tutor-Agent/src/tutor_agent/models/: base.py  cache.py  user.py
Tutor-Agent/src/tutor_agent/schemas/: __init__.py  auth.py  content.py
Tutor-Agent/src/tutor_agent/services/: __init__.py  personalized_content.py
book-source/: README.md  (+12 more)
(+349 files in other folders)
