[project]
name = "tutor-agent"
version = "0.1.0"
description = "AI-powered tutoring agent for personalized learning experiences"
readme = "README.md"
authors = [
    { name = "Mustafaadeel1", email = "mustafaadeel989@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "passlib[bcrypt]>=1.7.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=5.1.2",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
